--- a/src/pages/Search/index.less
+++ b/src/pages/Search/index.less
@@ -1,4 +1,4 @@
-@import url("../../style/variable.scss");
+@import url("../../style/variable.less");
 .page-search {
   position: relative;
   margin: 30px auto;
@@ -31,5 +31,5 @@
 }
 
 .ant-empty-description {
-  color: $foreColor;
+  color: @foreColor;
 }
