--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,24 +1,28 @@
-@import url("../../style/variable.scss");
+@import url("../../style/variable.less");
 
-$rankFirst: #ff183e;
-$rankSecond: #ff5c38;
-$rankThird: #ffb821;
-$rankOther: #666;
-$cardImgHeight: 220px;
-$cardBigImgHeight: calc(2 * $cardImgHeiht);
-$headBannerWidth: 800px;
-$headHistroyWidth: calc($pageWidth - $headBannerWidth);
+@rankFirst: #ff183e;
+@rankSecond: #ff5c38;
+@rankThird: #ffb821;
+@rankOther: #666;
+@cardImgHeight: 220px;
+// less中解决CSS3的calc冲突问题
+// height: calc(~"100% - 50px");
+// @cap: 50px;
+// height: calc(~"100% - @{cap}");
+@cardBigImgHeight: calc(~"2 * @{cardImgHeight}");
+@headBannerWidth: 800px;
+@headHistroyWidth: calc(~"@{pageWidth} - @{headBannerWidth}");
 
 ::-moz-placeholder {
-  color: $foreColor;
+  color: @foreColor;
 }
 
 ::-webkit-input-placeholder {
-  color: $foreColor;
+  color: @foreColor;
 }
 
 :-ms-input-placeholder {
-  color: $foreColor;
+  color: @foreColor;
 }
 
 /* overwritten ant-design */
@@ -41,8 +45,8 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 
 .mian-box {
   position: fixed;
-  top: $headBarHeight;
-  left: $sideWidth;
+  top: @headBarHeight;
+  left: @sideWidth;
   right: 0;
   bottom: 0;
   overflow: auto;
@@ -50,16 +54,18 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 
 .header {
   position: relative;
+
   .header-bar {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    padding: 20px 0 20px $sideWidth;
+    padding: 20px 0 20px @sideWidth;
     z-index: 2;
-    background-color: $backColor;
+    background-color: @backColor;
     /* drag app window */
     -webkit-app-region: drag;
+
     .logo {
       display: inline-block;
       width: 125px;
@@ -68,26 +74,32 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
+
     .slot-title {
       display: inline-block;
       margin: 0 0 0 15px;
     }
+
     .search {
       float: right;
       position: relative;
     }
+
     .search-box {
       float: right;
       height: 40px;
       border-radius: 20px;
-      background-color: $shallowColor;
+      background-color: @shallowColor;
       box-shadow: 0 4px 18px rgba(17, 18, 38, .07);
       border: 1px solid transparent;
       overflow: hidden;
-      .search-input, .search-btn {
+
+      .search-input,
+      .search-btn {
         float: right;
         height: 100%;
       }
+
       .search-input {
         padding: 0 10px;
         margin: 0 0 0 20px;
@@ -95,18 +107,21 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
         border: none;
         outline: none;
       }
+
       .search-btn {
         width: 100px;
         text-align: center;
         line-height: 40px;
-        background-color: $themeColor;
-        color: $foreColor;
+        background-color: @themeColor;
+        color: @foreColor;
         cursor: pointer;
+
         &:hover {
-          background-color: $themeHoverColor;
+          background-color: @themeHoverColor;
         }
       }
     }
+
     .search-list {
       position: absolute;
       top: 100%;
@@ -115,22 +130,26 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
       background-color: #fff;
       border-radius: 5px;
       box-shadow: 0 28px 50px rgba(25, 24, 40, .35);
+
       .list-history .panel-title,
       .list-hot .panel-title {
         padding: 5px 10px;
         color: #999;
       }
+
       .list-item {
         position: relative;
         margin: 5px 5px;
         padding: 5px;
         border-radius: 3px;
+
         &:hover {
           background-color: #eee;
         }
+
         .index {
           display: inline-block;
-          background-color: $rankOther;
+          background-color: @rankOther;
           color: #fff;
           width: 20px;
           line-height: 20px;
@@ -138,59 +157,74 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
           text-align: center;
           border-radius: 3px;
         }
+
         .title {
           color: #000;
         }
       }
     }
-    .header-banner {
-      width: 800px;
-      background-image: url("../../assets/banner-blur-bg.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      .banner-item {
-        height: 250px;
-        img {
-          display: initial;
-          width: 100%;
-          height: 100%;
-        }
+
+    
+
+    .search-box {
+      background-color: transparent;
+      box-shadow: none;
+      border-color: @themeColor;
+    }
+
+
+  }
+
+  .header-banner {
+    width: 800px;
+    background-image: url("../../assets/banner-blur-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    .banner-item {
+      height: 250px;
+
+      img {
+        display: initial;
+        width: 100%;
+        height: 100%;
       }
     }
   }
+
   .header-history {
-    width: calc($headHistroyWidth - 15px);
+    width: calc(~"@{headHistroyWidth} - 15px");
     margin: 0 0 0 15px;
-    background-color: $shallowColor;
+    background-color: @shallowColor;
+
     .list-item {
       padding: 8px 15px;
+
       &:hover {
         background-color: rgba(0, 0, 0, 0.5);
+
         .title {
           transform: translateX(10px);
-          color: $hoverColor;
+          color: @hoverColor;
         }
       }
     }
+
     .top-title {
       padding: 20px 15px;
-      color: $foreColor;
+      color: @foreColor;
     }
+
     .title {
-      color: $foreColor;
+      color: @foreColor;
       transition: all 0.2s ease;
     }
-  }
-  .search-box {
-    background-color: transparent;
-    box-shadow: none;
-    border-color: $themeColor;
   }
 }
 
 
 .bar-container {
-  width: $pageWidth;
+  width: @pageWidth;
   margin: 0 auto;
 }
 
@@ -201,19 +235,19 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 .block-weekly .weekly-box .card-container:nth-of-type(1) .dot::before,
 .block-weekly .weekly-box .card-container:nth-of-type(1) .dot::after,
 .header .header-bar .search-list .list-item:nth-of-type(1) .index {
-  background-color: $rankFirst;
+  background-color: @rankFirst;
 }
 
 .block-weekly .weekly-box .card-container:nth-of-type(2) .dot::before,
 .block-weekly .weekly-box .card-container:nth-of-type(2) .dot::after,
 .header .header-bar .search-list .list-item:nth-of-type(2) .index {
-  background-color: $rankSecond;
+  background-color: @rankSecond;
 }
 
 .block-weekly .weekly-box .card-container:nth-of-type(3) .dot::before,
 .block-weekly .weekly-box .card-container:nth-of-type(3) .dot::after,
 .header .header-bar .search-list .list-item:nth-of-type(3) .index {
-  background-color: $rankThird;
+  background-color: @rankThird;
 }
 
 
@@ -227,22 +261,26 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
   text-align: center;
 }
 
-.block-top250 .cards-box{
-  &.cards-box--stop250 {
+.block-top250 .cards-box {
+  &.cards-box--top250 {
     position: relative;
-    padding: 0 0 0 calc(2* $oneOfSix);
+    padding: 0 0 0 calc(~"2 * @{oneOfSix}");
     margin: 0 0 30px 0;
   }
+
   .card-container {
     width: 25%;
+
     &.card-big {
       position: absolute;
       top: 0;
       left: 0;
-      width: calc(2* $oneOfSix);
+      width: calc(~"2* @{oneOfSix}");
       bottom: 20px;
+
       .movie-card {
         height: 100%;
+
         .img-tag {
           top: 10px;
           left: 10px;
@@ -250,23 +288,27 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
           line-height: 2rem;
           border-radius: 8px;
         }
+
         .ant-card-meta-title {
           font-size: 1.8rem;
           margin: 20px 0 10px 0;
         }
+
         .ant-card-meta-description {
           font-size: 1rem;
         }
       }
-      .movie-card .card-img, .loading-img-box {
-        height: $cardBigImgHeight;
+
+      .movie-card .card-img,
+      .loading-img-box {
+        height: @cardBigImgHeight;
       }
     }
   }
 }
 
 .cards-box .card-container {
-  width: $oneOfSix;
+  width: @oneOfSix;
   display: inline-block;
 }
 
@@ -278,14 +320,17 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
   .card-container {
     position: relative;
     padding: 15px 0 10px 0;
+
     .rate {
       font-size: .9rem;
       font-weight: 700px;
-      color: $backColor;
+      color: @backColor;
     }
+
     .title {
       color: #999;
     }
+
     .dot {
       position: absolute;
       top: -6px;
@@ -295,6 +340,7 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
       height: 11px;
       transform: translate(-50%, 0);
     }
+
     &::before {
       content: "";
       position: absolute;
@@ -303,8 +349,9 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
       width: 100%;
       height: 100%;
       border-radius: 50%;
-      background-color: $rankOther;
+      background-color: @rankOther;
     }
+
     &::after {
       content: "";
       position: absolute;
@@ -314,7 +361,7 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
       height: 58%;
       transform: translate(-50%, 0) rotate(45deg);
       transform-origin: 50% 50%;
-      background-color: $rankOther;
+      background-color: @rankOther;
     }
   }
 }
@@ -322,33 +369,38 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 .block-weekly {
   .line-raw {
     position: relative;
+
     .spotbox {
       position: absolute;
       top: 0;
       right: 0;
       display: flex;
+
       .spot {
         position: relative;
         margin: 0 10px;
+
         &:nth-of-type(1) {
           top: 20px;
           width: 20px;
           height: 50px;
-          background-image: linear-gradient($rankThird) #fff;
+          background-image: linear-gradient(@rankThird) #fff;
           border-radius: 10px 10px 0 0;
         }
+
         &:nth-of-type(2) {
           top: 10px;
           width: 26px;
           height: 50px;
-          background-image: linear-gradient($rankFirst) #fff;
+          background-image: linear-gradient(@rankFirst) #fff;
           border-radius: 13px 13px 0 0;
         }
+
         :nth-of-type(3) {
           top: 30px;
           width: 14px;
           height: 50px;
-          background-image: linear-gradient($rankSecond, #fff);
+          background-image: linear-gradient(@rankSecond, #fff);
           border-radius: 7px 7px 0 0;
         }
       }
@@ -369,6 +421,7 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 
 .movie-card .ant-card-body {
   padding: 5px 10px;
+
   .ant-card-meta-detail>div:not(:last-child) {
     margin: 0;
   }
@@ -377,13 +430,14 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 .loading-img-box,
 .movie-card img {
   width: 100%;
-  height: $cardImgHeiht;
+  height: @cardImgHeight;
 }
 
 .loading-img-box {
   position: relative;
   background-color: #f5f6f7;
   cursor: not-allowed;
+
   img {
     position: absolute;
     top: 50%;
@@ -396,64 +450,69 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 
 .block-newmovie {
   position: relative;
+
   .cards-box {
-    width: calc($oneOfSix) * 4;
+    width: calc(~"@{oneOfSix} * 4");
   }
 }
 
-.block-newmovie 
 .rate-box {
   position: absolute;
   top: 0;
   right: 0;
-  width: calc($pageWidth)- $oneOfSix * 4;
-}
-
-.rate-box {
+  width: calc(~"@{pageWidth} - @{oneOfSix} * 4");
   .goodbox {
     background-color: #f8f8f8;
+
     .goodbox-rate {
       position: relative;
       margin: 10px 20px;
       padding: 10px 50px;
       border-top: 1px solid #eee;
+
       &:nth-of-type(-n+3) .rank {
         -webkit-text-fill-color: transparent;
         background-clip: text;
         background-image: linear-gradient(180deg, #ffb821 0, #ff5c38 45%, #ff1459);
       }
+
       .title {
         font-size: .9rem;
         font-weight: 800;
+
         &:hover {
-          color: $themeHoverColor;
+          color: @themeHoverColor;
         }
       }
+
       .rank {
         position: absolute;
         top: 0;
         left: 0;
         font-size: 2rem;
-        color: $rankOther;
+        color: @rankOther;
       }
+
       .box {
         position: absolute;
         top: 10px;
         right: 0;
         color: #999;
       }
+
       .summary {
         color: #999;
       }
+
       .box-new {
-        color: $highlightColor;
+        color: @highlightColor;
       }
     }
   }
 }
 
 .footer {
-  border-top: 2px solid $themeColor;
+  border-top: 2px solid @themeColor;
   padding: 40px 0;
   font-size: 0.6rem;
   text-align: center;
@@ -462,10 +521,12 @@ $headHistroyWidth: calc($pageWidth - $headBannerWidth);
 
 .footer-block {
   line-height: 1.2rem;
+
   a {
     color: inherit;
+
     &:hover {
-      color: $themeHoverColor;
+      color: @themeHoverColor;
     }
   }
 }
